# projectsch

./: README.md  monopoly.c  monopoly.h
gameboard/: gameboard16.txt  gameboard19.txt  gameboard2.txt  gameboard6.txt  gameboard8.txt
properties/: properties10.txt  properties16.txt  properties18.txt  properties3.txt  properties8.txt
z5_project/: CMakeLists.txt
z5_project/src/: z5.c
